v0.67
 * Added possibility to edit youtube video url for a song (Issue #4)
 * Fixed bug where users' last login date was not saved to database (Issue #22)
 * Added saving users login count to database

v0.66 (2011-05-02)
 * Small fixes in logging debug data

v0.65 (2011-05-02)
 * Fixed bug which cause almost half of queries not to be cached
 * Fixed logging data (emergency on Exception + debug for saving data to memcached) 

v0.64 (2011-04-22)
 * Set up resource loggers, loggin data in file and emergency using e-mail

v0.63 (2011-04-21)
 * (added) Deploy.sh script is now part of a repository in _dev/deploy.sh
 * (fix) Small fix concerning exception logging

v0.62 (2011-04-21)
 * (fixes) Bunch of small bugfixes concerning logging exceptions

v0.61 (2011-04-21)
 * Small fixes

v0.60 (2011-04-21)
 * (fixed) Turned-off exception display on production and added exception logging to /tmp/logs/YYYY-MM-DD-hhbd.txt file
 
v0.59 (2011-04-10)
 * (bug #20) Added new description for main site
 * (bug #19) Fixed typo in website's meta title
 * (added) Displaying news images in news detail view

v0.58 (2011-02-06)
 * (fixed) Adding/editing lyrics by logged-in, and not logged-in users
 * (fixed) Handling XHR and regular add/edit song lyrics requests
 * (fixed) User is automatically logged-in after successful registration

v0.56 (2011-02-03)
 * (added) Facebook App ID added to metadata

v0.55 (2011-02-03)
 * [fixed] Compressed CSS files
 * [fixed] Compressed js files

v0.54 (2011-02-03)
 * [added] Dodana funkcjonalność dodawania tekstów do piosenek przez adminów /Issue #5/
 * [changed] SEO: dodane data premiery i przeniesiona nazwa wytwórni w meta description /Issue #7/
 * [added] SEO: sitemap index pod adresem /sitemap-index.xml
 * [added] SEO: albums sitemap under /sitemap-albums.xml
 * [added] SEO: artists sitemap at /sitemap-artists.xml
 * [added] SEO: news sitemap at /sitemap-news.xml
 * [added] SEO: songs sitemap at /sitemap-songs.xml (url without artist name)