@@ -4,19 +4,36 @@
     <div class="header">
       <h2>Info</h2>
     </div>
-    <p>To odsłona profilu użytkownika <strong><?php echo $this->user->getDisplayName() ?></strong>. Na razie nie ma tutaj żadnych ustawień ani inforacji, jednak pracujemy nad tym i niedługo zaczną się pojawiać nowe opcje.</p>
-    <p>W tej chwili po zalogowaniu możesz zostawiać komentarze, ze swoim podpisem.</p>
+    <p>To odsłona profilu użytkownika <strong><?php echo $this->user->getDisplayName() ?></strong>. Na razie nie ma tutaj dużo ustawień i informacji, jednak pracujemy nad tym i niedługo zaczną się pojawiać nowe opcje.</p>
+    <p>W tej chwili po zalogowaniu możesz zostawiać komentarze, ze swoim podpisem oraz uzupełniać swoją kolekcję oraz chcęlistę.</p>
     <p>W najbliższej przyszłości planujemy uruchomić:
       <ul class="list">
-        <li>Dodawanie albumów do prywatnej kolekcji.</li>
-        <li>Dodawanie albumów do "chcęlisty".</li>
         <li>Ocenianie albumów, wykonawców, utworów, newsów i wytwóri.</li>
         <li>Dodawanie sampli do utworów.</li>
-        <li>Dodawanie testków piosenek.</li>
         <li>Ustawienia profilu.</li>
       </ul>
     </p>
   </div>
+  
+  <div class="pane">
+    <div class="header">
+        <h2>Kolekcja</h2>
+    </div>
+    <ul>
+        <li>lista...</li>
+    </ul>
+  </div>
+  
+  <div class="pane">
+    <div class="header">
+        <h2>Chcęlista</h2>
+    </div>
+    <ul>
+        <li>lista...</li>
+    </ul>
+  </div>
+  
+  
 </div>
 
 <div id="aside">
